[gd_scene load_steps=4 format=2]

[ext_resource path="res://main-menu/ui/item/item.gd" type="Script" id=1]
[ext_resource path="res://assets/ui/fonts/montserrat_eb_32.tres" type="DynamicFont" id=3]
[ext_resource path="res://main-menu/ui/item/close.png" type="Texture" id=4]

[node name="item" type="MarginContainer"]
margin_right = 400.0
margin_bottom = 120.0
rect_min_size = Vector2( 400, 120 )
mouse_filter = 2
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 400.0
margin_bottom = 120.0
mouse_filter = 2
color = Color( 0.0705882, 0.0705882, 0.0705882, 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 400.0
margin_bottom = 120.0
mouse_filter = 2

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer"]
margin_right = 400.0
margin_bottom = 10.0
rect_min_size = Vector2( 0, 10 )

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 14.0
margin_right = 400.0
margin_bottom = 106.0
mouse_filter = 2
size_flags_vertical = 3

[node name="MarginContainer4" type="MarginContainer" parent="VBoxContainer/HBoxContainer"]
margin_right = 10.0
margin_bottom = 92.0
rect_min_size = Vector2( 10, 0 )

[node name="change_team" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 14.0
margin_right = 114.0
margin_bottom = 92.0
rect_min_size = Vector2( 100, 0 )
flat = true

[node name="color" type="ColorRect" parent="VBoxContainer/HBoxContainer/change_team"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 100, 50 )
mouse_filter = 2
color = Color( 0.156863, 0.156863, 0.156863, 1 )

[node name="team" type="Label" parent="VBoxContainer/HBoxContainer/change_team"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 3 )
text = "1"
align = 1
valign = 1

[node name="MarginContainer6" type="MarginContainer" parent="VBoxContainer/HBoxContainer"]
margin_left = 118.0
margin_right = 128.0
margin_bottom = 92.0
rect_min_size = Vector2( 10, 0 )

[node name="change_color" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 132.0
margin_right = 232.0
margin_bottom = 92.0
rect_min_size = Vector2( 100, 0 )
flat = true

[node name="color" type="ColorRect" parent="VBoxContainer/HBoxContainer/change_color"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 100, 50 )
mouse_filter = 2
color = Color( 0.396078, 0.396078, 0.396078, 1 )

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer/HBoxContainer"]
margin_left = 236.0
margin_right = 246.0
margin_bottom = 92.0
rect_min_size = Vector2( 10, 0 )
mouse_filter = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
margin_left = 250.0
margin_right = 277.0
margin_bottom = 92.0

[node name="player_name" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
margin_right = 27.0
margin_bottom = 40.0
custom_fonts/font = ExtResource( 3 )
text = "..."

[node name="MarginContainer5" type="MarginContainer" parent="VBoxContainer/HBoxContainer"]
margin_left = 281.0
margin_right = 292.0
margin_bottom = 92.0
rect_min_size = Vector2( 10, 0 )
mouse_filter = 2
size_flags_horizontal = 3

[node name="panel" type="MarginContainer" parent="VBoxContainer/HBoxContainer"]
margin_left = 296.0
margin_right = 386.0
margin_bottom = 92.0
rect_min_size = Vector2( 90, 0 )

[node name="kick_player" type="Button" parent="VBoxContainer/HBoxContainer/panel"]
margin_right = 90.0
margin_bottom = 92.0
flat = true

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/HBoxContainer/panel/kick_player"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 4 )
expand = true

[node name="MarginContainer3" type="MarginContainer" parent="VBoxContainer/HBoxContainer"]
margin_left = 390.0
margin_right = 400.0
margin_bottom = 92.0
rect_min_size = Vector2( 10, 0 )

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
margin_top = 110.0
margin_right = 400.0
margin_bottom = 120.0
rect_min_size = Vector2( 0, 10 )

[connection signal="pressed" from="VBoxContainer/HBoxContainer/change_team" to="." method="_on_change_team_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/change_color" to="." method="_on_change_color_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/panel/kick_player" to="." method="_on_kick_player_pressed"]
